<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_activity.DetailActivity"
    android:padding="14dp"
    android:background="@color/grey_primary"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/story_detail"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <FrameLayout
            android:id="@+id/story_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/image_story_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/story_image"
                android:scaleType="fitXY"
                android:transitionName="image"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/img_rounded_top"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/text_nama_user"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/nama_user"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:transitionName="userName"
                    />

                <TextView
                    android:id="@+id/text_created_at"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/created_at"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:transitionName="date"
                    />

            </RelativeLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/judul_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/story_container"
            app:layout_constraintTop_toBottomOf="@id/story_container"
            android:layout_marginTop="20dp"
            android:text="@string/story_description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/desc_text_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/judul_text"
            app:layout_constraintTop_toBottomOf="@+id/judul_text"
            app:layout_constraintEnd_toEndOf="@id/story_container"
            android:layout_marginTop="5dp"
            android:text="@string/deskripsi_cerita"
            android:textSize="16sp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>