<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="0dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/story_image" />

        <TextView
            android:id="@+id/user_story_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/story_image"
            app:layout_constraintTop_toBottomOf="@+id/story_image"
            android:layout_marginTop="18dp"
            android:layout_marginStart="15dp"
            android:text="@string/nama_user"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.02"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/user_story_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/user_story_name"
            app:layout_constraintTop_toBottomOf="@+id/user_story_name"
            android:paddingBottom="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/created_at"
            android:textColor="@color/secondary"
            />

        <ImageView
            android:id="@+id/btn_read_more"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_read_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_image"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/read_more" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>