<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome_activity.WelcomeActivity"
    android:background="#f5f5f5"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garisAtas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garisKiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garisTengah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/garisKanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"/>

        <ImageView
            android:id="@+id/logo_welcome"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/garisAtas"
            android:contentDescription="@string/logo_welcome"
            android:alpha="0"/>

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_welcome"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/welcome_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.05"
            android:alpha="0"
            />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/welcome_title"
            app:layout_constraintEnd_toStartOf="@+id/garisKanan"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="25dp"
            android:text="@string/welcome_text"
            android:textSize="15sp"
            android:letterSpacing="0.03"
            android:lineSpacingMultiplier="1.1"
            android:fontFamily="sans-serif-condensed"
            android:alpha="0"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/garisKiri"
            app:layout_constraintEnd_toStartOf="@+id/garisTengah"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:alpha="0"
            android:background="@drawable/button_green"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintStart_toEndOf="@+id/garisTengah"
            app:layout_constraintEnd_toStartOf="@+id/garisKanan"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:alpha="0"
            android:background="@drawable/button_green"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>