<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome_activity.WelcomeActivity"
    android:background="@color/grey_primary"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/login_logo" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/logo_login"
            app:layout_constraintTop_toBottomOf="@+id/logo_login"
            app:layout_constraintEnd_toEndOf="@+id/logo_login"
            android:layout_marginTop="20dp"
            android:text="@string/selamat_datang"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="32sp"
            android:letterSpacing="0.02"
            />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            app:layout_constraintStart_toStartOf="@+id/login_title"
            app:layout_constraintEnd_toEndOf="@+id/login_title"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:letterSpacing="0.001"
            />

        <com.dicoding.mystoryapp.ui.login_activity.EdLoginEmail
            android:id="@+id/ed_login_email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="@id/login_text"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            app:layout_constraintEnd_toEndOf="@id/login_text"
            android:layout_marginTop="30dp"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            />

        <com.dicoding.mystoryapp.ui.login_activity.EdLoginPassword
            android:id="@+id/ed_login_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="@+id/ed_login_email"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email"
            app:layout_constraintEnd_toEndOf="@id/ed_login_email"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@+id/ed_login_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
            app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
            android:layout_marginTop="30dp"
            android:text="@string/login_btn_text"
            android:textColor="@color/white"
            android:background="@drawable/button_green"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>