<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome_activity.WelcomeActivity"
    android:background="@color/grey_primary"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/login_logo"
            android:src="@drawable/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/logo_register"
            app:layout_constraintStart_toStartOf="@+id/logo_register"
            app:layout_constraintTop_toBottomOf="@+id/logo_register"
            android:layout_marginTop="40dp"
            android:letterSpacing="0.02"
            android:text="@string/register_now"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.001"
            android:text="@string/register_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/register_title"
            app:layout_constraintStart_toStartOf="@+id/register_title"
            app:layout_constraintTop_toBottomOf="@+id/register_title" />

        <com.dicoding.mystoryapp.ui.register_activity.EdRegisterNama
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="@+id/register_text"
            app:layout_constraintTop_toBottomOf="@+id/register_text"
            app:layout_constraintEnd_toEndOf="@+id/register_text"
            android:layout_marginTop="30dp"
            android:drawablePadding="8dp"
            android:inputType="text"
            />

        <com.dicoding.mystoryapp.ui.register_activity.EdRegisterEmail
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="@+id/ed_register_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_name"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            />

        <com.dicoding.mystoryapp.ui.register_activity.EdRegisterPassword
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@+id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
            android:layout_marginTop="30dp"
            android:text="@string/btn_regist_text"
            android:textColor="@color/white"
            android:background="@drawable/button_green"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>